--- a/po/wesnoth/fr.po
+++ b/po/wesnoth/fr.po
@@ -5473,7 +5473,7 @@ msgstr "Délai de connexion dépassé"
 
 #: src/multiplayer.cpp:239
 msgid ""
-"The nickname '$nick' is inactive. You cannot claim ownership of this "
+"The nickname ‘$nick’ is inactive. You cannot claim ownership of this "
 "nickname until you activate your account via email or ask an administrator "
 "to do it for you."
 msgstr ""
@@ -5501,7 +5501,7 @@ msgstr "Vous devez d'abord vous identifier."
 #: src/multiplayer.cpp:337
 #, fuzzy
 #| msgid "The nick '$nick' is already taken."
-msgid "The nickname '$nick' is already taken."
+msgid "The nickname ‘$nick’ is already taken."
 msgstr "Le pseudonyme '$nick' est déjà utilisé."
 
 #: src/multiplayer.cpp:339
@@ -5510,7 +5510,7 @@ msgstr "Le pseudonyme '$nick' est déjà utilisé."
 #| "The nick '$nick' contains invalid characters. Only alpha-numeric "
 #| "characters, underscores and hyphens are allowed."
 msgid ""
-"The nickname '$nick' contains invalid characters. Only alpha-numeric "
+"The nickname ‘$nick’ contains invalid characters. Only alpha-numeric "
 "characters, underscores and hyphens are allowed."
 msgstr ""
 "Le pseudonyme '$nick' contient des caractères invalides. Seuls les "
@@ -5519,7 +5519,7 @@ msgstr ""
 
 #: src/multiplayer.cpp:343
 #, fuzzy
-msgid "The nickname '$nick' is too long. Nicks must be 20 characters or less."
+msgid "The nickname ‘$nick’ is too long. Nicks must be 20 characters or less."
 msgstr ""
 "Le pseudonyme '$nick' est trop long. Les pseudonymes peuvent contenir au "
 "maximum 18 caractères."
@@ -5527,14 +5527,14 @@ msgstr ""
 #: src/multiplayer.cpp:346
 #, fuzzy
 #| msgid "The nick '$nick' is reserved and cannot be used by players."
-msgid "The nickname '$nick' is reserved and cannot be used by players."
+msgid "The nickname ‘$nick’ is reserved and cannot be used by players."
 msgstr ""
 "Le pseudonyme '$nick' est réservé et ne peut être utilisé par un joueur ."
 
 #: src/multiplayer.cpp:348
 #, fuzzy
 #| msgid "The nick '$nick' is not registered on this server."
-msgid "The nickname '$nick' is not registered on this server."
+msgid "The nickname ‘$nick’ is not registered on this server."
 msgstr "Le pseudonyme '$nick' n'est pas connu de ce serveur."
 
 #: src/multiplayer.cpp:349
@@ -5546,7 +5546,7 @@ msgstr " Ce serveur n'accepte pas les identifiants inconnus."
 #: src/multiplayer.cpp:351 src/multiplayer.cpp:353
 #, fuzzy
 #| msgid "The nick '$nick' is registered on this server."
-msgid "The nickname '$nick' is registered on this server."
+msgid "The nickname ‘$nick’ is registered on this server."
 msgstr "Le pseudonyme '$nick' est enregistré sur le serveur."
 
 #: src/multiplayer.cpp:354
