--- a/po/wesnoth/gl.po
+++ b/po/wesnoth/gl.po
@@ -5515,7 +5515,7 @@ msgstr "a conexión caducou"
 
 #: src/multiplayer.cpp:239
 msgid ""
-"The nickname '$nick' is inactive. You cannot claim ownership of this "
+"The nickname ‘$nick’ is inactive. You cannot claim ownership of this "
 "nickname until you activate your account via email or ask an administrator "
 "to do it for you."
 msgstr ""
@@ -5539,29 +5539,29 @@ msgid "You must login first."
 msgstr "Antes debes identificarte."
 
 #: src/multiplayer.cpp:337
-msgid "The nickname '$nick' is already taken."
+msgid "The nickname ‘$nick’ is already taken."
 msgstr "O alcume «$nick|» xa está collido."
 
 #: src/multiplayer.cpp:339
 msgid ""
-"The nickname '$nick' contains invalid characters. Only alpha-numeric "
+"The nickname ‘$nick’ contains invalid characters. Only alpha-numeric "
 "characters, underscores and hyphens are allowed."
 msgstr ""
 "O alcume «$nick|» contén caracteres non válidos. Só se permiten caracteres "
 "alfanuméricos latinos (nin tiles nin eñes), guións e guións baixos."
 
 #: src/multiplayer.cpp:343
-msgid "The nickname '$nick' is too long. Nicks must be 20 characters or less."
+msgid "The nickname ‘$nick’ is too long. Nicks must be 20 characters or less."
 msgstr ""
 "O alcume «$nick|» é longo de máis. Os alcumes non poden ter máis de vinte "
 "caracteres."
 
 #: src/multiplayer.cpp:346
-msgid "The nickname '$nick' is reserved and cannot be used by players."
+msgid "The nickname ‘$nick’ is reserved and cannot be used by players."
 msgstr "O alcume «$nick|» está reservado e ningún xogador pode usalo."
 
 #: src/multiplayer.cpp:348
-msgid "The nickname '$nick' is not registered on this server."
+msgid "The nickname ‘$nick’ is not registered on this server."
 msgstr "O alcume «$nick|» non está rexistrado neste servidor."
 
 #: src/multiplayer.cpp:349
@@ -5570,7 +5570,7 @@ msgstr ""
 " Este servidor non permite empregar alcumes sen rexistralos previamente."
 
 #: src/multiplayer.cpp:351 src/multiplayer.cpp:353
-msgid "The nickname '$nick' is registered on this server."
+msgid "The nickname ‘$nick’ is registered on this server."
 msgstr "O alcume «$nick|» xa está rexistrado neste servidor."
 
 #: src/multiplayer.cpp:354
