--- a/po/wesnoth/is.po
+++ b/po/wesnoth/is.po
@@ -5357,7 +5357,7 @@ msgstr "Tenging rann út"
 
 #: src/multiplayer.cpp:239
 msgid ""
-"The nickname '$nick' is inactive. You cannot claim ownership of this "
+"The nickname ‘$nick’ is inactive. You cannot claim ownership of this "
 "nickname until you activate your account via email or ask an administrator "
 "to do it for you."
 msgstr ""
@@ -5385,7 +5385,7 @@ msgstr "Þú verður að innskrá þig fyrst."
 #: src/multiplayer.cpp:337
 #, fuzzy
 #| msgid "The nick '$nick' is already taken."
-msgid "The nickname '$nick' is already taken."
+msgid "The nickname ‘$nick’ is already taken."
 msgstr "Notendanafnið '$nick' er nú þegar í notkun."
 
 #: src/multiplayer.cpp:339
@@ -5394,7 +5394,7 @@ msgstr "Notendanafnið '$nick' er nú þegar í notkun."
 #| "The nick '$nick' contains invalid characters. Only alpha-numeric "
 #| "characters, underscores and hyphens are allowed."
 msgid ""
-"The nickname '$nick' contains invalid characters. Only alpha-numeric "
+"The nickname ‘$nick’ contains invalid characters. Only alpha-numeric "
 "characters, underscores and hyphens are allowed."
 msgstr ""
 "Notendanafnið '$nick' inniheldur ógilda stafi. Eingöngu bókstafir, "
@@ -5402,7 +5402,7 @@ msgstr ""
 
 #: src/multiplayer.cpp:343
 #, fuzzy
-msgid "The nickname '$nick' is too long. Nicks must be 20 characters or less."
+msgid "The nickname ‘$nick’ is too long. Nicks must be 20 characters or less."
 msgstr ""
 "Notendanafnið '$nick' er of langt. Notendanöfn þurfa að vera innan við 19 "
 "stafi."
@@ -5410,13 +5410,13 @@ msgstr ""
 #: src/multiplayer.cpp:346
 #, fuzzy
 #| msgid "The nick '$nick' is reserved and cannot be used by players."
-msgid "The nickname '$nick' is reserved and cannot be used by players."
+msgid "The nickname ‘$nick’ is reserved and cannot be used by players."
 msgstr "Notendanafnið '$nick' er frátekið og ónothæft notendum."
 
 #: src/multiplayer.cpp:348
 #, fuzzy
 #| msgid "The nick '$nick' is not registered on this server."
-msgid "The nickname '$nick' is not registered on this server."
+msgid "The nickname ‘$nick’ is not registered on this server."
 msgstr "Notendanafnið '$nick' er ekki skráð á þessum miðlara."
 
 #: src/multiplayer.cpp:349
@@ -5428,7 +5428,7 @@ msgstr " Miðlarinn leyfir ekki óskráð notendanöfn."
 #: src/multiplayer.cpp:351 src/multiplayer.cpp:353
 #, fuzzy
 #| msgid "The nick '$nick' is registered on this server."
-msgid "The nickname '$nick' is registered on this server."
+msgid "The nickname ‘$nick’ is registered on this server."
 msgstr "Notendanafnið '$nick' er skráð á þessum miðlara."
 
 #: src/multiplayer.cpp:354
