--- a/po/wesnoth/it.po
+++ b/po/wesnoth/it.po
@@ -5403,7 +5403,7 @@ msgstr "Connessione scaduta"
 
 #: src/multiplayer.cpp:239
 msgid ""
-"The nickname '$nick' is inactive. You cannot claim ownership of this "
+"The nickname ‘$nick’ is inactive. You cannot claim ownership of this "
 "nickname until you activate your account via email or ask an administrator "
 "to do it for you."
 msgstr ""
@@ -5427,7 +5427,7 @@ msgstr "Devi prima accedere al server."
 #: src/multiplayer.cpp:337
 #, fuzzy
 #| msgid "The nick '$nick' is already taken."
-msgid "The nickname '$nick' is already taken."
+msgid "The nickname ‘$nick’ is already taken."
 msgstr "Il nome utente «$nick» è già in uso."
 
 #: src/multiplayer.cpp:339
@@ -5436,7 +5436,7 @@ msgstr "Il nome utente «$nick» è già in uso."
 #| "The nick '$nick' contains invalid characters. Only alpha-numeric "
 #| "characters, underscores and hyphens are allowed."
 msgid ""
-"The nickname '$nick' contains invalid characters. Only alpha-numeric "
+"The nickname ‘$nick’ contains invalid characters. Only alpha-numeric "
 "characters, underscores and hyphens are allowed."
 msgstr ""
 "Il nome utente «$nick» contiene caratteri non validi. Sono consentiti solo "
@@ -5445,7 +5445,7 @@ msgstr ""
 #: src/multiplayer.cpp:343
 #, fuzzy
 #| msgid "The nick '$nick' is too long. Nicks must be 20 characters or less."
-msgid "The nickname '$nick' is too long. Nicks must be 20 characters or less."
+msgid "The nickname ‘$nick’ is too long. Nicks must be 20 characters or less."
 msgstr ""
 "Il nome utente «$nick» è troppo lungo. I nomi utente devono essere lunghi al "
 "più 20 caratteri."
@@ -5453,14 +5453,14 @@ msgstr ""
 #: src/multiplayer.cpp:346
 #, fuzzy
 #| msgid "The nick '$nick' is reserved and cannot be used by players."
-msgid "The nickname '$nick' is reserved and cannot be used by players."
+msgid "The nickname ‘$nick’ is reserved and cannot be used by players."
 msgstr ""
 "Il nome utente «$nick» è riservato e non può essere usato dai giocatori."
 
 #: src/multiplayer.cpp:348
 #, fuzzy
 #| msgid "The nick '$nick' is not registered on this server."
-msgid "The nickname '$nick' is not registered on this server."
+msgid "The nickname ‘$nick’ is not registered on this server."
 msgstr "Il nome utente «$nick» non è stato registrato su questo server."
 
 #: src/multiplayer.cpp:349
@@ -5472,7 +5472,7 @@ msgstr " Questo server non permette l’uso di nomi non registrati."
 #: src/multiplayer.cpp:351 src/multiplayer.cpp:353
 #, fuzzy
 #| msgid "The nick '$nick' is registered on this server."
-msgid "The nickname '$nick' is registered on this server."
+msgid "The nickname ‘$nick’ is registered on this server."
 msgstr "Il nome utente «$nick» è stato riservato su questo server."
 
 #: src/multiplayer.cpp:354
