--- a/po/wesnoth/ko.po
+++ b/po/wesnoth/ko.po
@@ -5118,7 +5118,7 @@ msgstr "접속 시간 초과"
 
 #: src/multiplayer.cpp:239
 msgid ""
-"The nickname '$nick' is inactive. You cannot claim ownership of this "
+"The nickname ‘$nick’ is inactive. You cannot claim ownership of this "
 "nickname until you activate your account via email or ask an administrator "
 "to do it for you."
 msgstr ""
@@ -5143,25 +5143,25 @@ msgid "You must login first."
 msgstr "아이디를 입력하세요."
 
 #: src/multiplayer.cpp:337
-msgid "The nickname '$nick' is already taken."
+msgid "The nickname ‘$nick’ is already taken."
 msgstr "'$nick' 아이디로 접속한 사람이 이미 있습니다."
 
 #: src/multiplayer.cpp:339
 msgid ""
-"The nickname '$nick' contains invalid characters. Only alpha-numeric "
+"The nickname ‘$nick’ contains invalid characters. Only alpha-numeric "
 "characters, underscores and hyphens are allowed."
 msgstr ""
 
 #: src/multiplayer.cpp:343
-msgid "The nickname '$nick' is too long. Nicks must be 20 characters or less."
+msgid "The nickname ‘$nick’ is too long. Nicks must be 20 characters or less."
 msgstr "'$nick' 아이디는 너무 깁니다. 아이디는 20자 이하만 가능합니다."
 
 #: src/multiplayer.cpp:346
-msgid "The nickname '$nick' is reserved and cannot be used by players."
+msgid "The nickname ‘$nick’ is reserved and cannot be used by players."
 msgstr "'$nick' 아이디는 제한되어 있어 일반 사용자가 사용할 수 없습니다."
 
 #: src/multiplayer.cpp:348
-msgid "The nickname '$nick' is not registered on this server."
+msgid "The nickname ‘$nick’ is not registered on this server."
 msgstr "'$nick' 아이디는 이 서버에 등록되어 있지 않습니다."
 
 #: src/multiplayer.cpp:349
@@ -5169,7 +5169,7 @@ msgid " This server disallows unregistered nicknames."
 msgstr " 이 서버는 미등록 아이디를 허용하지 않습니다."
 
 #: src/multiplayer.cpp:351 src/multiplayer.cpp:353
-msgid "The nickname '$nick' is registered on this server."
+msgid "The nickname ‘$nick’ is registered on this server."
 msgstr "'$nick' 아이디는 이 서버에 등록되어 있습니다."
 
 #: src/multiplayer.cpp:354
