--- a/po/wesnoth/ru.po
+++ b/po/wesnoth/ru.po
@@ -5382,7 +5382,7 @@ msgstr "Превышен лимит времени подключения"
 #| "until you activate your account via email or ask an administrator to do "
 #| "it for you."
 msgid ""
-"The nickname '$nick' is inactive. You cannot claim ownership of this "
+"The nickname ‘$nick’ is inactive. You cannot claim ownership of this "
 "nickname until you activate your account via email or ask an administrator "
 "to do it for you."
 msgstr ""
@@ -5411,7 +5411,7 @@ msgstr "Сначала надо залогиниться"
 #: src/multiplayer.cpp:337
 #, fuzzy
 #| msgid "The nick '$nick' is already taken."
-msgid "The nickname '$nick' is already taken."
+msgid "The nickname ‘$nick’ is already taken."
 msgstr "Ник '$nick' уже занят."
 
 #: src/multiplayer.cpp:339
@@ -5420,7 +5420,7 @@ msgstr "Ник '$nick' уже занят."
 #| "The nick '$nick' contains invalid characters. Only alpha-numeric "
 #| "characters, underscores and hyphens are allowed."
 msgid ""
-"The nickname '$nick' contains invalid characters. Only alpha-numeric "
+"The nickname ‘$nick’ contains invalid characters. Only alpha-numeric "
 "characters, underscores and hyphens are allowed."
 msgstr ""
 "Ник '$nick' содержит недопустимые символы. Разрешены только латинские "
@@ -5429,19 +5429,19 @@ msgstr ""
 #: src/multiplayer.cpp:343
 #, fuzzy
 #| msgid "The nick '$nick' is too long. Nicks must be 20 characters or less."
-msgid "The nickname '$nick' is too long. Nicks must be 20 characters or less."
+msgid "The nickname ‘$nick’ is too long. Nicks must be 20 characters or less."
 msgstr "Ник '$nick' слишком длинный, разрешается не более 18 символов."
 
 #: src/multiplayer.cpp:346
 #, fuzzy
 #| msgid "The nick '$nick' is reserved and cannot be used by players."
-msgid "The nickname '$nick' is reserved and cannot be used by players."
+msgid "The nickname ‘$nick’ is reserved and cannot be used by players."
 msgstr "Ник '$nick' зарезервирован и запрещён для игроков."
 
 #: src/multiplayer.cpp:348
 #, fuzzy
 #| msgid "The nick '$nick' is not registered on this server."
-msgid "The nickname '$nick' is not registered on this server."
+msgid "The nickname ‘$nick’ is not registered on this server."
 msgstr "Ник '$nick' не зарегистрирован на этом сервере."
 
 #: src/multiplayer.cpp:349
@@ -5453,7 +5453,7 @@ msgstr " На этом сервере не разрешены незарегис
 #: src/multiplayer.cpp:351 src/multiplayer.cpp:353
 #, fuzzy
 #| msgid "The nick '$nick' is registered on this server."
-msgid "The nickname '$nick' is registered on this server."
+msgid "The nickname ‘$nick’ is registered on this server."
 msgstr "Ник '$nick' уже есть на этом сервере."
 
 #: src/multiplayer.cpp:354
