--- a/po/wesnoth/vi.po
+++ b/po/wesnoth/vi.po
@@ -5405,7 +5405,7 @@ msgstr "Hết thời gian kết nối"
 #| "until you activate your account via email or ask an administrator to do "
 #| "it for you."
 msgid ""
-"The nickname '$nick' is inactive. You cannot claim ownership of this "
+"The nickname ‘$nick’ is inactive. You cannot claim ownership of this "
 "nickname until you activate your account via email or ask an administrator "
 "to do it for you."
 msgstr ""
@@ -5432,7 +5432,7 @@ msgstr "Trước hết bạn phải đăng nhập."
 #: src/multiplayer.cpp:337
 #, fuzzy
 #| msgid "The nick '$nick' is already taken."
-msgid "The nickname '$nick' is already taken."
+msgid "The nickname ‘$nick’ is already taken."
 msgstr "Biệt danh '$nick' đã có người sử dụng."
 
 #: src/multiplayer.cpp:339
@@ -5441,7 +5441,7 @@ msgstr "Biệt danh '$nick' đã có người sử dụng."
 #| "The nick '$nick' contains invalid characters. Only alpha-numeric "
 #| "characters, underscores and hyphens are allowed."
 msgid ""
-"The nickname '$nick' contains invalid characters. Only alpha-numeric "
+"The nickname ‘$nick’ contains invalid characters. Only alpha-numeric "
 "characters, underscores and hyphens are allowed."
 msgstr ""
 "Biệt danh '$nick' chứa ký tự không hợp lệ. Chỉ cho phép các ký tự dạng chữ "
@@ -5450,20 +5450,20 @@ msgstr ""
 #: src/multiplayer.cpp:343
 #, fuzzy
 #| msgid "The nick '$nick' is too long. Nicks must be 20 characters or less."
-msgid "The nickname '$nick' is too long. Nicks must be 20 characters or less."
+msgid "The nickname ‘$nick’ is too long. Nicks must be 20 characters or less."
 msgstr "Tên '$nick' quá dài. Biệt danh phải từ 18 ký tự trở xuống."
 
 #: src/multiplayer.cpp:346
 #, fuzzy
 #| msgid "The nick '$nick' is reserved and cannot be used by players."
-msgid "The nickname '$nick' is reserved and cannot be used by players."
+msgid "The nickname ‘$nick’ is reserved and cannot be used by players."
 msgstr ""
 "Biệt danh '$nick' đã được dành riêng và các người chơi không thể sử dụng."
 
 #: src/multiplayer.cpp:348
 #, fuzzy
 #| msgid "The nick '$nick' is not registered on this server."
-msgid "The nickname '$nick' is not registered on this server."
+msgid "The nickname ‘$nick’ is not registered on this server."
 msgstr "Biệt danh '$nick' chưa đăng ký trên máy chủ này."
 
 #: src/multiplayer.cpp:349
@@ -5475,7 +5475,7 @@ msgstr " Máy chủ này không cho phép những biệt danh chưa đăng ký."
 #: src/multiplayer.cpp:351 src/multiplayer.cpp:353
 #, fuzzy
 #| msgid "The nick '$nick' is registered on this server."
-msgid "The nickname '$nick' is registered on this server."
+msgid "The nickname ‘$nick’ is registered on this server."
 msgstr "Biệt danh '$nick' đã đăng ký trên máy chủ này."
 
 #: src/multiplayer.cpp:354
