--- a/po/wesnoth/zh_TW.po
+++ b/po/wesnoth/zh_TW.po
@@ -5269,7 +5269,7 @@ msgstr "連接超時"
 
 #: src/multiplayer.cpp:239
 msgid ""
-"The nickname '$nick' is inactive. You cannot claim ownership of this "
+"The nickname ‘$nick’ is inactive. You cannot claim ownership of this "
 "nickname until you activate your account via email or ask an administrator "
 "to do it for you."
 msgstr ""
@@ -5297,7 +5297,7 @@ msgstr "您必須先登入。"
 #: src/multiplayer.cpp:337
 #, fuzzy
 #| msgid "The nick '$nick' is already taken."
-msgid "The nickname '$nick' is already taken."
+msgid "The nickname ‘$nick’ is already taken."
 msgstr "此帳號名稱'$nick'已被註冊。"
 
 #: src/multiplayer.cpp:339
@@ -5306,25 +5306,25 @@ msgstr "此帳號名稱'$nick'已被註冊。"
 #| "The nick '$nick' contains invalid characters. Only alpha-numeric "
 #| "characters, underscores and hyphens are allowed."
 msgid ""
-"The nickname '$nick' contains invalid characters. Only alpha-numeric "
+"The nickname ‘$nick’ contains invalid characters. Only alpha-numeric "
 "characters, underscores and hyphens are allowed."
 msgstr "此帳號名稱'$nick'包含無效字元，只能與用數字與字母、底線和連字號。"
 
 #: src/multiplayer.cpp:343
 #, fuzzy
-msgid "The nickname '$nick' is too long. Nicks must be 20 characters or less."
+msgid "The nickname ‘$nick’ is too long. Nicks must be 20 characters or less."
 msgstr "此帳號名稱'$nick'太長，帳號名稱必須小於18個字元。"
 
 #: src/multiplayer.cpp:346
 #, fuzzy
 #| msgid "The nick '$nick' is reserved and cannot be used by players."
-msgid "The nickname '$nick' is reserved and cannot be used by players."
+msgid "The nickname ‘$nick’ is reserved and cannot be used by players."
 msgstr "此帳號名稱 '$nick'已被保留，無法被玩家使用。"
 
 #: src/multiplayer.cpp:348
 #, fuzzy
 #| msgid "The nick '$nick' is not registered on this server."
-msgid "The nickname '$nick' is not registered on this server."
+msgid "The nickname ‘$nick’ is not registered on this server."
 msgstr "此帳號名稱'$nick'尚未在本伺服器註冊。"
 
 #: src/multiplayer.cpp:349
@@ -5336,7 +5336,7 @@ msgstr "本伺服器無法註冊這個帳號名稱。"
 #: src/multiplayer.cpp:351 src/multiplayer.cpp:353
 #, fuzzy
 #| msgid "The nick '$nick' is registered on this server."
-msgid "The nickname '$nick' is registered on this server."
+msgid "The nickname ‘$nick’ is registered on this server."
 msgstr "這個帳號'$nick'已經在這個伺服器上註冊。"
 
 #: src/multiplayer.cpp:354
