--- a/po/wesnoth/en_GB.po
+++ b/po/wesnoth/en_GB.po
@@ -5324,11 +5324,11 @@ msgstr "Connection timed out"
 #| "until you activate your account via email or ask an administrator to do "
 #| "it for you."
 msgid ""
-"The nickname '$nick' is inactive. You cannot claim ownership of this "
+"The nickname ‘$nick’ is inactive. You cannot claim ownership of this "
 "nickname until you activate your account via email or ask an administrator "
 "to do it for you."
 msgstr ""
-"The nickname '$nick' is inactive. You cannot claim ownership of this "
+"The nickname ‘$nick’ is inactive. You cannot claim ownership of this "
 "nickname until you activate your account via email or ask an administrator "
 "to do it for you."
 
@@ -5350,34 +5350,34 @@ msgstr "You must login first."
 
 #: src/multiplayer.cpp:337
 #| msgid "The nick '$nick' is already taken."
-msgid "The nickname '$nick' is already taken."
-msgstr "The nickname '$nick' is already taken."
+msgid "The nickname ‘$nick’ is already taken."
+msgstr "The nickname ‘$nick’ is already taken."
 
 #: src/multiplayer.cpp:339
 #| msgid ""
 #| "The nick '$nick' contains invalid characters. Only alpha-numeric "
 #| "characters, underscores and hyphens are allowed."
 msgid ""
-"The nickname '$nick' contains invalid characters. Only alpha-numeric "
+"The nickname ‘$nick’ contains invalid characters. Only alpha-numeric "
 "characters, underscores and hyphens are allowed."
 msgstr ""
-"The nickname '$nick' contains invalid characters. Only alpha-numeric "
+"The nickname ‘$nick’ contains invalid characters. Only alpha-numeric "
 "characters, underscores and hyphens are allowed."
 
 #: src/multiplayer.cpp:343
 #| msgid "The nick '$nick' is too long. Nicks must be 20 characters or less."
-msgid "The nickname '$nick' is too long. Nicks must be 20 characters or less."
-msgstr "The nickname '$nick' is too long. Nicks must be 20 characters or less."
+msgid "The nickname ‘$nick’ is too long. Nicks must be 20 characters or less."
+msgstr "The nickname ‘$nick’ is too long. Nicks must be 20 characters or less."
 
 #: src/multiplayer.cpp:346
 #| msgid "The nick '$nick' is reserved and cannot be used by players."
-msgid "The nickname '$nick' is reserved and cannot be used by players."
-msgstr "The nickname '$nick' is reserved and cannot be used by players."
+msgid "The nickname ‘$nick’ is reserved and cannot be used by players."
+msgstr "The nickname ‘$nick’ is reserved and cannot be used by players."
 
 #: src/multiplayer.cpp:348
 #| msgid "The nick '$nick' is not registered on this server."
-msgid "The nickname '$nick' is not registered on this server."
-msgstr "The nickname '$nick' is not registered on this server."
+msgid "The nickname ‘$nick’ is not registered on this server."
+msgstr "The nickname ‘$nick’ is not registered on this server."
 
 #: src/multiplayer.cpp:349
 #| msgid " This server disallows unregistered nicks."
@@ -5386,8 +5386,8 @@ msgstr " This server disallows unregistered nicknames."
 
 #: src/multiplayer.cpp:351 src/multiplayer.cpp:353
 #| msgid "The nick '$nick' is registered on this server."
-msgid "The nickname '$nick' is registered on this server."
-msgstr "The nickname '$nick' is registered on this server."
+msgid "The nickname ‘$nick’ is registered on this server."
+msgstr "The nickname ‘$nick’ is registered on this server."
 
 #: src/multiplayer.cpp:354
 #| msgid ""
