--- a/po/wesnoth/es.po
+++ b/po/wesnoth/es.po
@@ -5466,7 +5466,7 @@ msgstr "Tiempo excedido en la conexión"
 
 #: src/multiplayer.cpp:239
 msgid ""
-"The nickname '$nick' is inactive. You cannot claim ownership of this "
+"The nickname ‘$nick’ is inactive. You cannot claim ownership of this "
 "nickname until you activate your account via email or ask an administrator "
 "to do it for you."
 msgstr ""
@@ -5494,7 +5494,7 @@ msgstr "Debe iniciar sesión primero."
 #: src/multiplayer.cpp:337
 #, fuzzy
 #| msgid "The nick '$nick' is already taken."
-msgid "The nickname '$nick' is already taken."
+msgid "The nickname ‘$nick’ is already taken."
 msgstr "El nombre de usuario «$nick|» ya está en uso."
 
 #: src/multiplayer.cpp:339
@@ -5503,7 +5503,7 @@ msgstr "El nombre de usuario «$nick|» ya está en uso."
 #| "The nick '$nick' contains invalid characters. Only alpha-numeric "
 #| "characters, underscores and hyphens are allowed."
 msgid ""
-"The nickname '$nick' contains invalid characters. Only alpha-numeric "
+"The nickname ‘$nick’ contains invalid characters. Only alpha-numeric "
 "characters, underscores and hyphens are allowed."
 msgstr ""
 "El nombre de usuario «$nick|» contiene caracteres no válidos. Sólo se "
@@ -5513,7 +5513,7 @@ msgstr ""
 #: src/multiplayer.cpp:343
 #, fuzzy
 #| msgid "The nick '$nick' is too long. Nicks must be 20 characters or less."
-msgid "The nickname '$nick' is too long. Nicks must be 20 characters or less."
+msgid "The nickname ‘$nick’ is too long. Nicks must be 20 characters or less."
 msgstr ""
 "El nombre de usuario «$nick» es demasiado largo.  Los nombres de usuario "
 "deben ser de 20 caracteres o menos."
@@ -5521,7 +5521,7 @@ msgstr ""
 #: src/multiplayer.cpp:346
 #, fuzzy
 #| msgid "The nick '$nick' is reserved and cannot be used by players."
-msgid "The nickname '$nick' is reserved and cannot be used by players."
+msgid "The nickname ‘$nick’ is reserved and cannot be used by players."
 msgstr ""
 "El nombre de usuario «$nick|» está reservado y no puede ser utilizado por "
 "jugadores."
@@ -5529,7 +5529,7 @@ msgstr ""
 #: src/multiplayer.cpp:348
 #, fuzzy
 #| msgid "The nick '$nick' is not registered on this server."
-msgid "The nickname '$nick' is not registered on this server."
+msgid "The nickname ‘$nick’ is not registered on this server."
 msgstr "El nombre de usuario «$nick|» no está registrado en este servidor."
 
 #: src/multiplayer.cpp:349
@@ -5541,7 +5541,7 @@ msgstr " Este servidor no permite nombres de usuario no registrados."
 #: src/multiplayer.cpp:351 src/multiplayer.cpp:353
 #, fuzzy
 #| msgid "The nick '$nick' is registered on this server."
-msgid "The nickname '$nick' is registered on this server."
+msgid "The nickname ‘$nick’ is registered on this server."
 msgstr "El nombre de usuario «$nick|» está registrado en este servidor."
 
 #: src/multiplayer.cpp:354
