--- a/po/wesnoth/nb_NO.po
+++ b/po/wesnoth/nb_NO.po
@@ -5333,7 +5333,7 @@ msgstr "Forbindelse avbrutt"
 
 #: src/multiplayer.cpp:239
 msgid ""
-"The nickname '$nick' is inactive. You cannot claim ownership of this "
+"The nickname ‘$nick’ is inactive. You cannot claim ownership of this "
 "nickname until you activate your account via email or ask an administrator "
 "to do it for you."
 msgstr ""
@@ -5358,25 +5358,25 @@ msgid "You must login first."
 msgstr "Du må logge inn på denne serveren"
 
 #: src/multiplayer.cpp:337
-msgid "The nickname '$nick' is already taken."
+msgid "The nickname ‘$nick’ is already taken."
 msgstr ""
 
 #: src/multiplayer.cpp:339
 msgid ""
-"The nickname '$nick' contains invalid characters. Only alpha-numeric "
+"The nickname ‘$nick’ contains invalid characters. Only alpha-numeric "
 "characters, underscores and hyphens are allowed."
 msgstr ""
 
 #: src/multiplayer.cpp:343
-msgid "The nickname '$nick' is too long. Nicks must be 20 characters or less."
+msgid "The nickname ‘$nick’ is too long. Nicks must be 20 characters or less."
 msgstr ""
 
 #: src/multiplayer.cpp:346
-msgid "The nickname '$nick' is reserved and cannot be used by players."
+msgid "The nickname ‘$nick’ is reserved and cannot be used by players."
 msgstr ""
 
 #: src/multiplayer.cpp:348
-msgid "The nickname '$nick' is not registered on this server."
+msgid "The nickname ‘$nick’ is not registered on this server."
 msgstr ""
 
 #: src/multiplayer.cpp:349
@@ -5384,7 +5384,7 @@ msgid " This server disallows unregistered nicknames."
 msgstr ""
 
 #: src/multiplayer.cpp:351 src/multiplayer.cpp:353
-msgid "The nickname '$nick' is registered on this server."
+msgid "The nickname ‘$nick’ is registered on this server."
 msgstr ""
 
 #: src/multiplayer.cpp:354
