--- a/po/wesnoth/pl.po
+++ b/po/wesnoth/pl.po
@@ -5430,7 +5430,7 @@ msgstr "Minął czas oczekiwania na połączenie"
 
 #: src/multiplayer.cpp:239
 msgid ""
-"The nickname '$nick' is inactive. You cannot claim ownership of this "
+"The nickname ‘$nick’ is inactive. You cannot claim ownership of this "
 "nickname until you activate your account via email or ask an administrator "
 "to do it for you."
 msgstr ""
@@ -5458,7 +5458,7 @@ msgstr "Musisz się najpierw zalogować."
 #: src/multiplayer.cpp:337
 #, fuzzy
 #| msgid "The nick '$nick' is already taken."
-msgid "The nickname '$nick' is already taken."
+msgid "The nickname ‘$nick’ is already taken."
 msgstr "Pseudonim \"$nick\" jest już zajęty."
 
 #: src/multiplayer.cpp:339
@@ -5467,7 +5467,7 @@ msgstr "Pseudonim \"$nick\" jest już zajęty."
 #| "The nick '$nick' contains invalid characters. Only alpha-numeric "
 #| "characters, underscores and hyphens are allowed."
 msgid ""
-"The nickname '$nick' contains invalid characters. Only alpha-numeric "
+"The nickname ‘$nick’ contains invalid characters. Only alpha-numeric "
 "characters, underscores and hyphens are allowed."
 msgstr ""
 "Pseudonim \"$nick\" zawiera niedozwolone znaki. Dozwolone są tylko litery, "
@@ -5475,21 +5475,21 @@ msgstr ""
 
 #: src/multiplayer.cpp:343
 #, fuzzy
-msgid "The nickname '$nick' is too long. Nicks must be 20 characters or less."
+msgid "The nickname ‘$nick’ is too long. Nicks must be 20 characters or less."
 msgstr ""
 "Pseudonim \"$nick\" jest za długi. Pseudonim może mieć maksymalnie 18 znaków."
 
 #: src/multiplayer.cpp:346
 #, fuzzy
 #| msgid "The nick '$nick' is reserved and cannot be used by players."
-msgid "The nickname '$nick' is reserved and cannot be used by players."
+msgid "The nickname ‘$nick’ is reserved and cannot be used by players."
 msgstr ""
 "Pseudonim \"$nick\" jest zarezerwowany i nie może być używany przez graczy."
 
 #: src/multiplayer.cpp:348
 #, fuzzy
 #| msgid "The nick '$nick' is not registered on this server."
-msgid "The nickname '$nick' is not registered on this server."
+msgid "The nickname ‘$nick’ is not registered on this server."
 msgstr "Pseudonim '$nick' nie jest zarejestrowany na tym serwerze."
 
 #: src/multiplayer.cpp:349
@@ -5501,7 +5501,7 @@ msgstr " Ten serwer nie dopuszcza niezarejestrowanych pseudonimów."
 #: src/multiplayer.cpp:351 src/multiplayer.cpp:353
 #, fuzzy
 #| msgid "The nick '$nick' is registered on this server."
-msgid "The nickname '$nick' is registered on this server."
+msgid "The nickname ‘$nick’ is registered on this server."
 msgstr "Pseudonim \"$nick\" jest zarejestrowany na tym serwerze."
 
 #: src/multiplayer.cpp:354
