--- a/po/wesnoth/pt_BR.po
+++ b/po/wesnoth/pt_BR.po
@@ -5441,7 +5441,7 @@ msgstr "Time out na conexão"
 #| "until you activate your account via email or ask an administrator to do "
 #| "it for you."
 msgid ""
-"The nickname '$nick' is inactive. You cannot claim ownership of this "
+"The nickname ‘$nick’ is inactive. You cannot claim ownership of this "
 "nickname until you activate your account via email or ask an administrator "
 "to do it for you."
 msgstr ""
@@ -5467,7 +5467,7 @@ msgstr "Você deve fazer o login primeiro."
 #: src/multiplayer.cpp:337
 #, fuzzy
 #| msgid "The nick '$nick' is already taken."
-msgid "The nickname '$nick' is already taken."
+msgid "The nickname ‘$nick’ is already taken."
 msgstr "O nick '$nick' já está sendo usado."
 
 #: src/multiplayer.cpp:339
@@ -5476,7 +5476,7 @@ msgstr "O nick '$nick' já está sendo usado."
 #| "The nick '$nick' contains invalid characters. Only alpha-numeric "
 #| "characters, underscores and hyphens are allowed."
 msgid ""
-"The nickname '$nick' contains invalid characters. Only alpha-numeric "
+"The nickname ‘$nick’ contains invalid characters. Only alpha-numeric "
 "characters, underscores and hyphens are allowed."
 msgstr ""
 "O nick '$nick' contém caracteres inválidos. São permitidos apenas caracteres "
@@ -5485,20 +5485,20 @@ msgstr ""
 #: src/multiplayer.cpp:343
 #, fuzzy
 #| msgid "The nick '$nick' is too long. Nicks must be 20 characters or less."
-msgid "The nickname '$nick' is too long. Nicks must be 20 characters or less."
+msgid "The nickname ‘$nick’ is too long. Nicks must be 20 characters or less."
 msgstr ""
 "O nick '$nick' é muito grande. Nicks devem conter 20 caracteres ou menos."
 
 #: src/multiplayer.cpp:346
 #, fuzzy
 #| msgid "The nick '$nick' is reserved and cannot be used by players."
-msgid "The nickname '$nick' is reserved and cannot be used by players."
+msgid "The nickname ‘$nick’ is reserved and cannot be used by players."
 msgstr "O nick '$nick' é reservado e não pode ser usado por jogadores."
 
 #: src/multiplayer.cpp:348
 #, fuzzy
 #| msgid "The nick '$nick' is not registered on this server."
-msgid "The nickname '$nick' is not registered on this server."
+msgid "The nickname ‘$nick’ is not registered on this server."
 msgstr "O nick '$nick' não está registrado neste servidor."
 
 #: src/multiplayer.cpp:349
@@ -5510,7 +5510,7 @@ msgstr "Este servidor não permite nicks não registrados."
 #: src/multiplayer.cpp:351 src/multiplayer.cpp:353
 #, fuzzy
 #| msgid "The nick '$nick' is registered on this server."
-msgid "The nickname '$nick' is registered on this server."
+msgid "The nickname ‘$nick’ is registered on this server."
 msgstr "O nick '$nick' está registrado neste servidor."
 
 #: src/multiplayer.cpp:354
