'on-line' -> 'online'.

--- a/doc/man/wesnoth.6
+++ b/doc/man/wesnoth.6
@@ -37,7 +37,7 @@ their best advantage while denying your foes the chance to do the
 same. As units gain experience, they acquire new abilities and
 become more powerful. Play in your own language and test your skill
 against a smart computer opponent, or join Wesnoth's large community
-of on-line players. Create your own custom units, scenarios or
+of online players. Create your own custom units, scenarios or
 campaigns, and share them with others.
 .
 .SH OPTIONS
@@ -51,7 +51,7 @@ sets BitsPerPixel value. Example:
 goes directly to the campaign based on the parameters.
 The difficulty is a number between 1 and current campaign's difficulties number.  The default difficulty is 1.
 The scenario must be one of the campaign's child scenarios. The default scenario is campaign's first scenario.
-.B Note: When using this switch please ensure that you specify the data directory path as the final argument 
+.B Note: When using this switch please ensure that you specify the data directory path as the final argument
 aswell, otherwise the game will take the campaign/scenario id as the data dir.
 .TP
 .BI --config-dir \ name
