--- a/po/wesnoth-manpages/en@shaw.po
+++ b/po/wesnoth-manpages/en@shaw.po
@@ -97,7 +97,7 @@ msgid ""
 "while denying your foes the chance to do the same. As units gain experience, "
 "they acquire new abilities and become more powerful. Play in your own "
 "language and test your skill against a smart computer opponent, or join "
-"Wesnoth's large community of on-line players. Create your own custom units, "
+"Wesnoth's large community of online players. Create your own custom units, "
 "scenarios or campaigns, and share them with others."
 msgstr ""
 "𐑛𐑦𐑓𐑰𐑑 𐑷𐑤 𐑧𐑯𐑩𐑥𐑦 𐑤𐑰𐑛𐑼𐑟 𐑿𐑟𐑦𐑙 𐑩 𐑢𐑧𐑤-𐑗𐑴𐑟𐑩𐑯 𐑒𐑨𐑛𐑮𐑰 𐑝 𐑑𐑮𐑵𐑐𐑕, 𐑑𐑱𐑒𐑦𐑙 𐑒𐑺 𐑑 𐑥𐑨𐑯𐑦𐑡 𐑿𐑼 "
