--- a/po/wesnoth-manpages/ja.po
+++ b/po/wesnoth-manpages/ja.po
@@ -93,7 +93,7 @@ msgid ""
 "while denying your foes the chance to do the same. As units gain experience, "
 "they acquire new abilities and become more powerful. Play in your own "
 "language and test your skill against a smart computer opponent, or join "
-"Wesnoth's large community of on-line players. Create your own custom units, "
+"Wesnoth's large community of online players. Create your own custom units, "
 "scenarios or campaigns, and share them with others."
 msgstr ""
 "生え抜きの中核の軍隊を使用して、資金と村の資源の管理に注意しながら、全ての敵"
