--- a/po/wesnoth-manpages/sv.po
+++ b/po/wesnoth-manpages/sv.po
@@ -97,7 +97,7 @@ msgid ""
 "while denying your foes the chance to do the same. As units gain experience, "
 "they acquire new abilities and become more powerful. Play in your own "
 "language and test your skill against a smart computer opponent, or join "
-"Wesnoth's large community of on-line players. Create your own custom units, "
+"Wesnoth's large community of online players. Create your own custom units, "
 "scenarios or campaigns, and share them with others."
 msgstr ""
 "Besegra alla fiendeledare med dina handplockade trupper och hushåll med dina "
