--- a/po/wesnoth-manpages/zh_TW.po
+++ b/po/wesnoth-manpages/zh_TW.po
@@ -79,7 +79,7 @@ msgid ""
 "while denying your foes the chance to do the same. As units gain experience, "
 "they acquire new abilities and become more powerful. Play in your own "
 "language and test your skill against a smart computer opponent, or join "
-"Wesnoth's large community of on-line players. Create your own custom units, "
+"Wesnoth's large community of online players. Create your own custom units, "
 "scenarios or campaigns, and share them with others."
 msgstr ""
 "用精心挑選的部隊打敗所有的敵人。管理好您的資源和村莊。 所有單位都有自己的優勢"
